<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/krave_restaurant_border" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/good_times_regular"
        android:text="@string/restaurant_name_first"
        android:textColor="@color/red_border"
        android:textSize="@dimen/name_large_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/brown_gothic_w01_bold"
        android:text="@string/restaurant_name_second"
        android:textColor="@color/black_border"
        android:textSize="@dimen/name_medium_size" />

    <View
        android:layout_width="@dimen/line_width"
        android:layout_height="@dimen/line_size"
        android:layout_gravity="center"
        android:background="@color/metallic_silver" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/brown_gothic_w01_bold"
        android:text="@string/restaurant_description"
        android:textColor="@color/black_border"
        android:textSize="@dimen/name_normal_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/metallic_silver" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/detail_padding"
        android:paddingLeft="@dimen/line_padding"
        android:paddingRight="@dimen/line_padding"
        android:paddingTop="@dimen/detail_padding">

        <TextView
            android:id="@+id/krave_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/marker_24px"
            android:drawablePadding="@dimen/detail_info_padding"
            android:fontFamily="@font/brown_gothic_w01_bold"
            android:onClick="loadMap"
            android:padding="@dimen/detail_info_padding"
            android:text="@string/restaurant_address"
            android:textColor="@color/black_border"
            android:textSize="@dimen/detail_size" />


        <TextView
            android:id="@+id/krave_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/website_24px"
            android:drawablePadding="@dimen/icon_padding"
            android:fontFamily="@font/brown_gothic_w01_bold"
            android:onClick="loadBrowser"
            android:padding="@dimen/detail_info_padding"
            android:text="@string/restaurant_website"
            android:textColor="@color/black_border"
            android:textSize="@dimen/detail_size" />


        <TextView
            android:id="@+id/krave_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/envelope_24px"
            android:drawablePadding="@dimen/icon_padding"
            android:fontFamily="@font/brown_gothic_w01_bold"
            android:onClick="loadEmail"
            android:padding="@dimen/detail_info_padding"
            android:text="@string/restaurant_email"
            android:textColor="@color/black_border"
            android:textSize="@dimen/detail_size" />


        <TextView
            android:id="@+id/krave_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/phone_24px"
            android:drawablePadding="@dimen/icon_padding"
            android:fontFamily="@font/brown_gothic_w01_bold"
            android:onClick="loadPhone"
            android:padding="@dimen/detail_info_padding"
            android:text="@string/restaurant_phone"
            android:textColor="@color/black_border"
            android:textSize="@dimen/detail_size" />

        <TextView
            android:id="@+id/krave_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/calendar_24px"
            android:drawablePadding="@dimen/icon_padding"
            android:fontFamily="@font/brown_gothic_w01_bold"
            android:onClick="loadCalendar"
            android:padding="@dimen/detail_info_padding"
            android:text="@string/restaurant_hours"
            android:textColor="@color/black_border"
            android:textSize="@dimen/detail_size" />
    </LinearLayout>

</LinearLayout>